--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Stylish EV vs Petrol — PHEV presets</title>
+<title>Hybrid - Break even</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <style>
 :root{
@@ -76,7 +76,7 @@ button:hover{ transform:translateY(-2px); }
   <div class="header">
     <div class="logo">EV</div>
     <div>
-      <h2 class="title">EV vs Petrol — PHEV presets</h2>
+      <h2 class="title">PHEV - EV vs Petrol</h2>
       <div class="subtitle">Choose a PHEV to auto-fill consumption values, then press Update</div>
     </div>
   </div>
